plugins {
    id 'java-library'
    id 'maven-publish'
    id 'net.neoforged.moddev' version '2.0.146'
    id 'idea'
}

version = mod_version
group = mod_group_id

base {
    archivesName = mod_id
}

java.toolchain.languageVersion = JavaLanguageVersion.of(21)

sourceSets.main.resources {
    srcDir('src/generated/resources')
    exclude('src/generated/**/.cache')
}

repositories {
    maven { url = 'https://maven.blamejared.com' }
}

neoForge {
    version = neo_version

    parchment {
        mappingsVersion = parchment_mappings_version
        minecraftVersion = parchment_minecraft_version
    }

    runs {
        client {
            client()
            systemProperty 'neoforge.enabledGameTestNamespaces', mod_id
            ideName = 'Tribal Power Client'
        }
        server {
            server()
            programArgument '--nogui'
            systemProperty 'neoforge.enabledGameTestNamespaces', mod_id
            ideName = 'Tribal Power Server'
        }
        data {
            data()
            programArguments.addAll '--mod', mod_id, '--all',
                    '--output', file('src/generated/resources/').absolutePath,
                    '--existing', file('src/main/resources/').absolutePath
            ideName = 'Tribal Power Data'
        }
        configureEach {
            systemProperty 'forge.logging.markers', 'REGISTRIES'
            logLevel = org.slf4j.event.Level.INFO
            gameDirectory = project.file('run')
        }
        verification {
            type = 'gameTestServer'
            gameDirectory = project.file('build/verification')
            systemProperty 'neoforge.enabledGameTestNamespaces', mod_id
        }
        // Generates real March chunks, checks the flora/light budget, writes build/march-survey/march_survey.png.
        marchSurvey {
            server()
            gameDirectory = project.file('build/march-survey')
            programArgument '--nogui'
            jvmArgument '-Dtribalpower.marchSurvey=true'
        }
        // Disposable: load the frozen 3.0 save under build/migration-3.0 (copied to build/migration-3.1-load).
        migration31 {
            server()
            gameDirectory = project.file('build/migration-3.1-load')
            programArgument '--nogui'
        }
        packVerification {
            server()
            gameDirectory = project.file('build/pack-verification')
            programArgument '--nogui'
            jvmArgument '-Xmx4G'
        }
        packMenuVerification {
            client()
            jvmArgument '-Dtribalpower.visualVerification=true'
            gameDirectory = project.file('build/pack-client')
            jvmArgument '-Xmx5G'
            programArguments.addAll '--username', 'LatticeQA'
        }
        codexVerification {
            client()
            gameDirectory = project.file('build/codex-client')
            jvmArgument '-Dtribalpower.codexVerification=true'
            programArguments.addAll '--username', 'CodexQA', '--width', '1280', '--height', '800'
        }
        codexServerVerification {
            server()
            gameDirectory = project.file('build/codex-server')
            programArgument '--nogui'
        }
        codexWorldVerification {
            client()
            gameDirectory = project.file('build/codex-client')
            jvmArgument '-Dtribalpower.codexVerification=true'
            programArguments.addAll '--username', 'CodexQA', '--width', '1280', '--height', '800', '--quickPlayMultiplayer', '127.0.0.1:25586'
        }
        packClientVerification {
            client()
            jvmArgument '-Dtribalpower.visualVerification=true'
            gameDirectory = project.file('build/pack-client')
            jvmArgument '-Xmx5G'
            programArguments.addAll '--username', 'LatticeQA', '--quickPlayMultiplayer', '127.0.0.1:25585'
        }
        // Low-memory showcase pair (2 CPU / 7 GB container, software GL): tools/showcase_verification.py drives it.
        showcaseServer {
            server()
            gameDirectory = project.file('build/pack-verification')
            programArgument '--nogui'
            jvmArgument '-Xmx1500m'
        }
        showcaseClient {
            client()
            gameDirectory = project.file('build/showcase-client')
            jvmArgument '-Xmx3G'
            jvmArgument '-Dtribalpower.visualVerification=true'
            jvmArgument '-Dtribalpower.showcaseVerification=true'
            jvmArgument '-Dtribalpower.showcaseScreens=true'
            programArguments.addAll '--username', 'LatticeQA', '--width', '1280', '--height', '800', '--quickPlayMultiplayer', '127.0.0.1:25585'
        }
    }

    mods {
        "${mod_id}" {
            sourceSet(sourceSets.main)
        }
    }
}

configurations {
    runtimeClasspath.extendsFrom localRuntime
}

dependencies {
    compileOnly 'mezz.jei:jei-1.21.1-common-api:19.51.0.418'
    compileOnly 'mezz.jei:jei-1.21.1-neoforge-api:19.51.0.418'
}

var generateModMetadata = tasks.register('generateModMetadata', ProcessResources) {
    var replaceProperties = [
            minecraft_version      : minecraft_version,
            minecraft_version_range: minecraft_version_range,
            neo_version            : neo_version,
            loader_version_range   : loader_version_range,
            mod_id                 : mod_id,
            mod_name               : mod_name,
            mod_license            : mod_license,
            mod_version            : mod_version,
            mod_authors            : mod_authors,
            mod_description        : mod_description,
    ]
    inputs.properties replaceProperties
    expand replaceProperties
    from 'src/main/templates'
    into 'build/generated/sources/modMetadata'
}
sourceSets.main.resources.srcDir generateModMetadata
neoForge.ideSyncTask generateModMetadata

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
}

tasks.withType(AbstractArchiveTask).configureEach {
    preserveFileTimestamps = false
    reproducibleFileOrder = true
}

// GameTests stay on the compile classpath for runVerification. They are not player content
// and a published jar full of mock-player bytecode is extra surface for CurseForge's scanner.
// Same for screenshot drivers, the GameTest empty structure,
// and FTB Library face overlays (that mod is not a dependency).
tasks.named('jar', Jar).configure {
    exclude 'tk/darrow/tribalpower/verification/**'
    exclude 'tk/darrow/tribalpower/client/VisualVerification.class'
    exclude 'tk/darrow/tribalpower/client/VisualVerification$*.class'
    exclude 'tk/darrow/tribalpower/client/ShowcaseVerification.class'
    exclude 'tk/darrow/tribalpower/client/ShowcaseVerification$*.class'
    exclude 'data/tribalpower/structure/empty.nbt'
    exclude 'assets/ftblibrary/**'
    duplicatesStrategy = DuplicatesStrategy.FAIL
}

idea {
    module {
        downloadSources = true
        downloadJavadoc = true
    }
}
